Closed Bug 756628 Opened 12 years ago Closed 12 years ago

IonMonkey: OOM Testing: Assertion failure: ion::IsEnabled(cx), at js/src/ion/Ion.cpp:840

Categories

(Core :: JavaScript Engine, defect)

Other Branch
x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla18

People

(Reporter: decoder, Assigned: terrence)

References

Details

(Keywords: assertion, testcase, Whiteboard: [ion:p2:fx18])

Attachments

(1 file)

The following command asserts on ionmonkey revision 8c54899dae82 (dbg build): js -e 'const libdir = "js/src/jit-test/lib/";' -A 6266 -f js/src/jit-test/tests/pic/grandproto.js
Still valid with ballast patch, same parameters.
I get a failure here but it's slightly different. Stack: #0 0x00000000004046d4 in JS::Value::toObject (this=0x7ffff63810b0) at ../../jsapi.h:474 #1 0x000000000069b175 in js::StackFrame::constructorThis (this=0x7ffff63810b8) at ../vm/Stack.h:713 #2 0x000000000069cb16 in js::StackFrame::epilogue (this=0x7ffff63810b8, cx=0xe07930) at /alt/home/dvander/mozilla/ionmonkey/js/src/vm/Stack.cpp:360 #3 0x000000000051c459 in js::Interpret (cx=0xe07930, entryFrame=0x7ffff6381030, interpMode=js::JSINTERP_NORMAL) at /alt/home/dvander/mozilla/ionmonkey/js/src/jsinterp.cpp:1629 Where thisv is JSVAL_VOID
Whiteboard: [ion:p2:fx18]
Reproduces with --no-ion.
QA Contact: terrence
Attached patch v0: fixSplinter Review
Fixes the OOM crash for me.
Assignee: general → terrence
Status: NEW → ASSIGNED
Attachment #662705 - Flags: review?(jcoppeard)
QA Contact: terrence
Comment on attachment 662705 [details] [diff] [review] v0: fix Looks good.
Attachment #662705 - Flags: review?(jcoppeard) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: