Bug 756628 - OOM failure with oom-after; r=jonco

On the following testcase: |js -e 'const libdir = "js/src/jit-test/lib/";'
-A 6266 -f js/src/jit-test/tests/pic/grandproto.js|.  Appears to be a simple
missing allocation check.